--- a/realm-browser/src/main/res/values/strings.xml
+++ b/realm-browser/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="rb_test_text_small">Lorem ipsum</string>
     <string name="rb_Wrap_text">Wrap text inside column</string>
     <string name="rb_click_to_launch">Click to launch</string>
+    <string name="beginWith">beginWith</string>
+    <string name="equalTo">equalTo</string>
 </resources>
